--- a/css/style.css
+++ b/css/style.css
@@ -49,28 +49,15 @@ content: "";}
  * #006276 - blue
  *
  * */
-/* Altera webfont */
-@font-face {
-    font-family: 'alteraregular';
-    src: url('altera-webfont.eot');
-    src: url('altera-webfont.eot?#iefix') format('embedded-opentype'),
-         url('altera-webfont.woff') format('woff'),
-         url('altera-webfont.ttf') format('truetype'),
-         url('altera-webfont.svg#alteraregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
 /* BG IMAGE PATH url('../images/my_image.gif') */
 /*the main global rules*/
-body{font-family:'alteraregular', Arial, sans-serif;font-size:100.01%;position:relative;margin:0 auto;background-color:#691529;}
+body{font-family:Arial, sans-serif;font-size:100.01%;position:relative;margin:0 auto;background-color:#691529;}
 div#wrap{
   width: 900px;
   margin: 0 auto;
   position: relative;
   background-color: #fff;
 }
-
 
 /*grouped selectors - good for position:absolute and relative*/
 
@@ -86,7 +73,6 @@ h1 {
 }
 h1 a {
 }
-
 
 /*content area*/
 div#contents{}
